[gd_scene load_steps=28 format=3 uid="uid://5y8g0xyxpr00"]

[ext_resource type="PackedScene" uid="uid://dmnep8phelnvy" path="res://models/misc_zones/field_office/penthouse/penthouse.fbx" id="1_vkvjg"]
[ext_resource type="Texture2D" uid="uid://cjcugdtkiwqwy" path="res://models/misc_zones/field_office/penthouse/penthouse_23.png" id="2_8ud3v"]
[ext_resource type="Script" uid="uid://d0qj3lyj16xr5" path="res://scenes/final_boss/penthouse_boss.gd" id="2_bn0hh"]
[ext_resource type="Texture2D" uid="uid://b63aa1vfsnk6" path="res://models/misc_zones/field_office/penthouse/penthouse_8.png" id="2_ge76q"]
[ext_resource type="Script" uid="uid://okjbx502s3r5" path="res://objects/cog/cogdna.gd" id="3_pu03o"]
[ext_resource type="Resource" uid="uid://bkkauwbcsnukc" path="res://objects/cog/presets/sellbot/traffic_manager.tres" id="4_7haf7"]
[ext_resource type="PackedScene" uid="uid://dflwjcy6fj0av" path="res://objects/cog/cog.tscn" id="4_p2l1n"]
[ext_resource type="PackedScene" uid="uid://cy4iox7mj5ei0" path="res://objects/toon/toon.tscn" id="5_s3u6r"]
[ext_resource type="Resource" uid="uid://ckn41hxv8gwaw" path="res://objects/cog/presets/lawbot/whistleblower.tres" id="6_76361"]
[ext_resource type="PackedScene" uid="uid://direah3lbjuu5" path="res://objects/battle/battle_node/battle_node.tscn" id="6_eqg7a"]
[ext_resource type="PackedScene" uid="uid://b8mtvfipu1qsg" path="res://objects/interactables/elevators/cogdo_elevator.tscn" id="6_mrpky"]
[ext_resource type="Resource" uid="uid://bkkkabh3sre13" path="res://objects/cog/presets/cashbot/bookkeeper.tres" id="7_qh8x2"]
[ext_resource type="Resource" uid="uid://ba7yjm7wpt1fu" path="res://objects/cog/presets/bossbot/union_buster.tres" id="7_y0ea0"]
[ext_resource type="AudioStream" uid="uid://bkthwpyj2bvjr" path="res://audio/music/encntr_penultimate/encntr_penultimate_interactive.tres" id="13_utcau"]
[ext_resource type="Resource" uid="uid://c5dbwjk742di6" path="res://objects/cog/presets/bossbot/flunky.tres" id="15_25tuy"]
[ext_resource type="Script" uid="uid://bexhvgaggjj0i" path="res://objects/battle/battle_resources/misc_movies/final_boss/final_boss_intro.gd" id="15_qmw7d"]
[ext_resource type="PackedScene" uid="uid://rd3cif0wap2n" path="res://models/misc_zones/field_office/ImportantPortrait.fbx" id="17_sk75u"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_4lrhb"]
resource_name = "lambert5"
transparency = 4
cull_mode = 2
vertex_color_use_as_albedo = true
albedo_color = Color(0.905882, 0.905882, 0.905882, 1)
albedo_texture = ExtResource("2_ge76q")
emission_enabled = true
billboard_mode = 2

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_3e38r"]
data = PackedVector3Array(7.6821, -0.0282, 14.7034, 7.6821, -0.0382, 14.7034, -6.0221, -0.0382, 14.7034, -6.0221, -0.0382, 14.7034, -6.0221, -0.0282, 14.7034, 7.6821, -0.0282, 14.7034, 7.6821, -0.0282, -14.7035, 7.6821, -0.0282, 14.7034, -6.0221, -0.0282, 14.7034, -6.0221, -0.0282, 14.7034, -6.0221, -0.0282, -14.7035, 7.6821, -0.0282, -14.7035, 7.6821, -0.0382, -14.7035, 7.6821, -0.0282, -14.7035, -6.0221, -0.0282, -14.7035, -6.0221, -0.0282, -14.7035, -6.0221, -0.0382, -14.7035, 7.6821, -0.0382, -14.7035, 7.6821, -0.0382, 14.7034, 7.6821, -0.0382, -14.7035, -6.0221, -0.0382, -14.7035, -6.0221, -0.0382, -14.7035, -6.0221, -0.0382, 14.7034, 7.6821, -0.0382, 14.7034, 7.6821, -0.0282, -14.7035, 7.6821, -0.0382, -14.7035, 7.6821, -0.0382, 14.7034, 7.6821, -0.0382, 14.7034, 7.6821, -0.0282, 14.7034, 7.6821, -0.0282, -14.7035, -6.0221, -0.0282, 14.7034, -6.0221, -0.0382, 14.7034, -6.0221, -0.0382, -14.7035, -6.0221, -0.0382, -14.7035, -6.0221, -0.0282, -14.7035, -6.0221, -0.0282, 14.7034)
backface_collision = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_wvq2t"]
resource_name = "lambert27"
transparency = 4
cull_mode = 2
vertex_color_use_as_albedo = true
albedo_color = Color(0.905882, 0.905882, 0.905882, 1)
albedo_texture = ExtResource("2_8ud3v")
emission_enabled = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_yckgi"]
resource_name = "lambert27"
transparency = 4
cull_mode = 2
vertex_color_use_as_albedo = true
albedo_color = Color(0.905882, 0.905882, 0.905882, 1)
albedo_texture = ExtResource("2_8ud3v")
emission_enabled = true

[sub_resource type="Environment" id="Environment_7vej0"]
ambient_light_source = 2
ambient_light_color = Color(1, 1, 1, 1)
ssr_max_steps = 142
ssr_fade_in = 0.764735
ssr_fade_out = 1.36604
ssr_depth_tolerance = 28.01
ssao_power = 1e+06
glow_normalized = true
glow_intensity = 8.0
glow_bloom = 1.0
glow_blend_mode = 1
glow_hdr_threshold = 4.0
glow_hdr_scale = 4.0
glow_hdr_luminance_cap = 28.2
glow_map_strength = 1.0
fog_light_color = Color(0, 0, 0, 1)
fog_density = 0.3
volumetric_fog_density = 0.293
volumetric_fog_albedo = Color(0, 0, 0, 1)
adjustment_brightness = 2.55
adjustment_contrast = 8.0
adjustment_saturation = 8.0

[sub_resource type="Resource" id="Resource_tlo1o"]
script = ExtResource("15_qmw7d")
skippable = true
override_music = ExtResource("13_utcau")

[sub_resource type="Animation" id="Animation_pkrw8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Grp_animation/cloudAnimation_GRP:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Grp_animation/seq_node_counterFlash_GRP/seq_node_flashOFF_GRP:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Grp_animation/seq_node_counterFlash_GRP/seq_node_flashON_GRP:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_ql12b"]
resource_name = "standard"
length = 46.0
loop_mode = 1
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Grp_animation/cloudAnimation_GRP:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 46),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 6.28144, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Grp_animation/seq_node_counterFlash_GRP/seq_node_flashOFF_GRP:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Grp_animation/seq_node_counterFlash_GRP/seq_node_flashON_GRP:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [false, true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tjyyh"]
_data = {
&"RESET": SubResource("Animation_pkrw8"),
&"default": SubResource("Animation_ql12b")
}

[sub_resource type="GDScript" id="GDScript_i03po"]
resource_name = "dont_look"
script/source = "extends Node3D


func get_out() -> String:
	return \"Get back to work.\"

func _ready() -> void:
	# Schedule a meeting with me.
	return
"

[node name="penthouse" instance=ExtResource("1_vkvjg")]
script = ExtResource("2_bn0hh")
possible_bosses = Array[ExtResource("3_pu03o")]([ExtResource("4_7haf7"), ExtResource("7_qh8x2"), ExtResource("6_76361"), ExtResource("7_y0ea0")])

[node name="bossChair" parent="Grp_room/props_GRP" index="0"]
visible = false

[node name="tt_m_ara_crg_floorLamp_wonky_floorLamp" parent="Grp_room/props_GRP" index="8"]
surface_material_override/0 = SubResource("StandardMaterial3D_4lrhb")

[node name="tt_m_ara_crg_floorLamp_wonky_floorLamp1" parent="Grp_room/props_GRP" index="9"]
surface_material_override/0 = SubResource("StandardMaterial3D_4lrhb")

[node name="tt_m_ara_crg_floorLamp_wonky_floorLamp2" parent="Grp_room/props_GRP" index="10"]
surface_material_override/0 = SubResource("StandardMaterial3D_4lrhb")

[node name="tt_m_ara_crg_floorLamp_wonky_floorLamp3" parent="Grp_room/props_GRP" index="11"]
surface_material_override/0 = SubResource("StandardMaterial3D_4lrhb")

[node name="wires" parent="Grp_room/props_GRP" index="15"]
visible = false

[node name="tubing" parent="Grp_room/props_GRP" index="16"]
visible = false

[node name="machine02" parent="Grp_room/props_GRP" index="19"]
visible = false

[node name="Grp_collisions" parent="." index="1"]
visible = false

[node name="StaticBody3D" type="StaticBody3D" parent="Grp_collisions/pCube3" index="0"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Grp_collisions/pCube3/StaticBody3D" index="0"]
shape = SubResource("ConcavePolygonShape3D_3e38r")

[node name="seq_node_flashON_GRP" parent="Grp_animation/seq_node_counterFlash_GRP" index="0"]
visible = false

[node name="flicker_02" parent="Grp_animation/seq_node_monitorFlicker_GRP" index="1"]
visible = false

[node name="cloudAnimation_GRP" parent="Grp_animation" index="2"]
transform = Transform3D(1.2, 0, 0, 0, 1.2, 0, 0, 0, 1.2, 0, 0, 0)

[node name="toonCage" parent="Grp_animation" index="3"]
surface_material_override/0 = SubResource("StandardMaterial3D_wvq2t")

[node name="hook" parent="Grp_animation/toonCage" index="0"]
surface_material_override/0 = SubResource("StandardMaterial3D_yckgi")

[node name="cage" parent="Grp_animation/toonCage" index="1"]
surface_material_override/0 = SubResource("StandardMaterial3D_wvq2t")

[node name="cage_door" parent="Grp_animation/toonCage" index="2"]
surface_material_override/0 = SubResource("StandardMaterial3D_wvq2t")

[node name="CagedToon" parent="Grp_animation/toonCage" index="3" instance=ExtResource("5_s3u6r")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.94665, 3.4633, -10.426)

[node name="WorldEnvironment" type="WorldEnvironment" parent="." index="4"]
environment = SubResource("Environment_7vej0")

[node name="ElevatorEntrance" parent="." index="5" instance=ExtResource("6_mrpky")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0.83145, -0.03319, 14.9418)
monitoring = false

[node name="frame" parent="ElevatorEntrance/unnamed1/Grp_elevatorB" index="2"]
visible = false

[node name="ElevatorExit" parent="." index="6" instance=ExtResource("6_mrpky")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.83145, -0.03319, -14.9068)
monitoring = false

[node name="frame" parent="ElevatorExit/unnamed1/Grp_elevatorB" index="2"]
visible = false

[node name="BattleNode" parent="." index="7" node_paths=PackedStringArray("cogs") instance=ExtResource("6_eqg7a")]
cogs = [NodePath("BossCog"), NodePath("BossCog2")]
override_intro = SubResource("Resource_tlo1o")
item_pool = null

[node name="BossCog" parent="BattleNode" index="3" instance=ExtResource("4_p2l1n")]
transform = Transform3D(-0.0447878, 0, 0.998996, 0, 1, 0, -0.998996, 0, -0.0447878, -1.5, 0, -7.298)
dna = ExtResource("15_25tuy")
skelecog_chance = 0

[node name="BossCog2" parent="BattleNode" index="4" instance=ExtResource("4_p2l1n")]
transform = Transform3D(0.0447877, 0, -0.998996, 0, 1, 0, 0.998996, 0, 0.0447877, 3, 0, -7.413)
dna = ExtResource("15_25tuy")
skelecog_chance = 0

[node name="CharPositions" type="Node3D" parent="." index="8"]

[node name="StartPos" type="Node3D" parent="CharPositions" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.813838, 0, 15.7915)

[node name="WalkInPos" type="Node3D" parent="CharPositions" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.468, 0, 5.447)

[node name="CogPos1" type="Node3D" parent="CharPositions" index="2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.285277, 0, -16.2539)

[node name="CogPos2" type="Node3D" parent="CharPositions" index="3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.54566, 0, -16.2539)

[node name="CogPos3" type="Node3D" parent="CharPositions" index="4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.285277, 0, -15.4412)

[node name="CogPos4" type="Node3D" parent="CharPositions" index="5"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.54566, 0, -15.4412)

[node name="BossIdle" type="Node3D" parent="CharPositions" index="6"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.04125, 0, 0)

[node name="PlayerEndPos" type="Node3D" parent="CharPositions" index="7"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.88473, 0, -7.6813)

[node name="PlayerWinPos" type="Node3D" parent="CharPositions" index="8"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0, -6.897)

[node name="InFrontElevatorPos" type="Node3D" parent="CharPositions" index="9"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, -7.999)

[node name="ElevatorLeftPos" type="Node3D" parent="CharPositions" index="10"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.44455, 0, -15.8425)

[node name="ElevatorRightPos" type="Node3D" parent="CharPositions" index="11"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.158406, 0, -15.8425)

[node name="WB_TM_INTRO" type="Node3D" parent="CharPositions" index="12"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.467618, 0, 4.78265)

[node name="TM_WB_INTRO" type="Node3D" parent="CharPositions" index="13"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.467618, 0, -2.30226)

[node name="WB_TM_WALKTO" type="Node3D" parent="CharPositions" index="14"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.467618, 0, 2.23768)

[node name="CameraAngles" type="Node3D" parent="." index="9"]

[node name="FocusBoss" type="Camera3D" parent="CameraAngles" index="0"]
transform = Transform3D(0.999658, 0, 0.0261769, 0, 1, 0, -0.026177, 0, 0.999657, 0.79, 1.76, -0.63)
fov = 52.0

[node name="DeskFocus" type="Camera3D" parent="CameraAngles" index="1"]
transform = Transform3D(-4.37114e-08, -0.173648, -0.984808, 0, 0.984808, -0.173648, 1, -7.5904e-09, -4.30473e-08, 3.921, 2.2, -0.015)
fov = 52.0

[node name="PaintingFocus" type="Camera3D" parent="CameraAngles" index="2"]
unique_name_in_owner = true
transform = Transform3D(-4.37114e-08, -0.173648, -0.984808, 0, 0.984808, -0.173648, 1, -7.59039e-09, -4.30473e-08, 3.921, 2.79, -0.015)
fov = 52.0

[node name="GameWin" type="Camera3D" parent="CameraAngles" index="3"]
transform = Transform3D(1, 0, 0, 0, 0.963631, 0.267238, 0, -0.267238, 0.963631, 3, 2.27, -5.215)
fov = 52.0

[node name="GameWinElevator" type="Camera3D" parent="CameraAngles" index="4"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 0.999656, 0.0262114, 0, -0.0262114, 0.999656, 0.856654, 2.27, -5.215)
fov = 52.0

[node name="BattleFocus" type="Camera3D" parent="CameraAngles" index="5"]
transform = Transform3D(0.999658, 0, 0.0261769, 0, 1, 0, -0.026177, 0, 0.999657, 0.79, 1.76, 4.5)
fov = 52.0

[node name="WBFocus" type="Camera3D" parent="CameraAngles" index="6"]
transform = Transform3D(0.999658, 0, 0.0261769, 0, 1, 0, -0.026177, 0, 0.999657, 0.72, 1.76, 5.5)
fov = 52.0

[node name="SceneAnimator" type="AnimationPlayer" parent="." index="10"]
libraries = {
"": SubResource("AnimationLibrary_tjyyh")
}
autoplay = "default"

[node name="Player" parent="." index="11" instance_placeholder="res://objects/player/player.tscn"]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 5.5208, 0, -9.73577)

[node name="ImportantPortrait" parent="." index="12" instance=ExtResource("17_sk75u")]
script = SubResource("GDScript_i03po")

[node name="FadeOutLayer" type="CanvasLayer" parent="." index="13"]
unique_name_in_owner = true
layer = 20
visible = false

[node name="BlackFade" type="ColorRect" parent="FadeOutLayer" index="0"]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0)

[connection signal="s_battle_end" from="BattleNode" to="." method="on_battle_finished"]

[editable path="ElevatorEntrance"]
[editable path="ElevatorExit"]
